--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/IntegratedCA
 excludes=
+file.reference.mysql-connector-j-8.0.31__1_.jar=mysql-connector-j-8.0.31 (1).jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-j-8.0.31__1_.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
